# phono

./: .gitignore  AGENTS.md  README.md  bug-diagnosis.md  build.gradle.kts  fix4a-opportunistic-buffer-patch.md  librespot-patches.md  settings.gradle.kts  telemetry-id
.github/workflows/: pages.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/lightphone/spotify/: App.kt  AppForegroundObserver.kt  MainActivity.kt  NativeInit.kt
app/src/main/java/com/lightphone/spotify/audio/: PhonoAudioTrackSink.kt
app/src/main/res/drawable/: ic_splash_empty.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
docs/: README.md  audio-sink-baseline-metrics.md  audio-sink.md  battery-field-tests.md  native-playlist-writes.md  offline-downloads.md  playback-stability-field-tests.md
docs/future/: backend-consolidation.md  session-reconnect.md
light-ui/: VENDOR_VERSION  build.gradle.kts
rust/librespot-audio-patched/: .cargo_vcs_info.json  Cargo.toml  PATCHES.md
rust/librespot-audio-patched/src/: lib.rs
rust/librespot-audio-patched/src/fetch/: mod.rs  receive.rs
rust/librespot-core-patched/: Cargo.toml  P2.1-SPIKE.md  PATCHES.md
rust/librespot-core-patched/src/: cache.rs  config.rs  http_client.rs  lib.rs  oauth_fallback.rs  spclient.rs  version.rs
rust/librespot-playback-patched/: PATCHES.md
rust/librespot-playback-patched/src/: config.rs  player.rs
rust/librespot-playback-patched/src/audio_backend/: mod.rs
rust/spotify-core/: Cargo.toml  rust-toolchain.toml  uniffi.toml
rust/spotify-core/src/: android_audiotrack_sink.rs  android_ctx.rs  artist.rs  audio_drain.rs  audio_sink_jni.rs  audio_sink_stub.rs  auth.rs  downloads.rs  lib.rs  library.rs  metadata_batch.rs  pcm_ring.rs  playback_checkpoint.rs  playlist.rs  queue.rs  settings.rs  user_profile.rs  web_client.rs
scripts/: build-rust.sh  sync-light-ui.sh
setup/: index.html  qrcodegen.js  setup.css  setup.js
(+157 files in other folders)
